intress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /abc
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
